--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
-    "heroku-postbuild": "npm run build && npm run start"
+    "heroku-postbuild": "npm install && npm run build && npm run start"
   },
   "engines": {
     "node": ">=6.0",
